tests/error/ptr_assign_global.gw
#! [contains] can't assign non member function to member function pointer
class C {
  typedef void Test();
  Test test;
}

fun void test(){}
C c;
test @=> c.test;
